--- a/.env
+++ b/.env
@@ -20,13 +20,13 @@ CI_ENVIRONMENT = development
 # APP
 #--------------------------------------------------------------------
 
-app.baseURL = 'http://localhost:8080/'
-# app.baseURL = 'http://36.88.42.95'
+# app.baseURL = 'http://localhost:8080/'
+app.baseURL = 'http://36.88.42.95'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
 # app.CSPEnabled = false
-API_HOST = 'http://36.88.42.95:1523'
+API_HOST = 'http://localhost:1523'
 #--------------------------------------------------------------------
 # DATABASE
 #--------------------------------------------------------------------
