--- a/.env
+++ b/.env
@@ -26,7 +26,8 @@ app.baseURL = 'http://36.88.42.95'
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
 # app.CSPEnabled = false
-API_HOST = 'http://localhost:1523'
+# API_HOST = 'http://localhost:1523'
+API_HOST = 'http://36.88.42.95:1523'
 #--------------------------------------------------------------------
 # DATABASE
 #--------------------------------------------------------------------
