--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ CI_ENVIRONMENT = production
 #--------------------------------------------------------------------
 
 # app.baseURL = 'http://localhost:8080/'
-app.baseURL = 'http://36.88.42.95'
+app.baseURL = '/http://36.92.58.82/'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
