--- a/.env
+++ b/.env
@@ -27,7 +27,8 @@ app.baseURL = 'http://36.92.58.82/'
 # app.forceGlobalSecureRequests = false
 # app.CSPEnabled = false
 # API_HOST = 'http://localhost:1523/api'
-API_HOST = 'http://36.92.58.82/'
+API_HOST = 'http://36.92.58.82:1523/api'
+
 #--------------------------------------------------------------------
 # DATABASE
 #--------------------------------------------------------------------
