--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ app.baseURL = 'http://36.92.58.82/'
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
 # app.CSPEnabled = false
-# API_HOST = 'http://localhost:1525/api'
-API_HOST = 'http://36.92.58.82:1523/api'
+# API_HOST = 'http://localhost:1525/api' # testing
+API_HOST = 'http://36.92.58.82:1523/api' # prod
 
 #--------------------------------------------------------------------
 # DATABASE
