update env testing

--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ app.baseURL = 'http://36.92.58.82:4000/'
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
 # app.CSPEnabled = false
-API_HOST = 'http://localhost:1525/api' # testing
+API_HOST = 'http://36.92.58.82:1525/api' # testing
 # API_HOST = 'http://36.92.58.82:1523/api' # prod
 
 #--------------------------------------------------------------------
