--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ CI_ENVIRONMENT = development
 #--------------------------------------------------------------------
 
 # app.baseURL = 'http://localhost:8080/'
-app.baseURL = 'http://36.92.58.82:4000/'
+app.baseURL = 'http://36.92.58.82'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
