feature (sales) new db connection for recon

--- a/.env
+++ b/.env
@@ -28,6 +28,7 @@ app.baseURL = 'http://36.92.58.82'
 # app.CSPEnabled = false
 # API_HOST = 'http://36.92.58.82:1525/api' # testing
 API_HOST = 'http://36.92.58.82:1523/api' # prod
+# API_HOST = 'http://localhost:1523/api' # local
 
 #--------------------------------------------------------------------
 # DATABASE
