env testing active

--- a/.env
+++ b/.env
@@ -20,8 +20,8 @@ CI_ENVIRONMENT = production
 # APP
 #--------------------------------------------------------------------
 
-app.baseURL = 'http://localhost:8080/'
-# app.baseURL = 'http://36.92.58.82:4000/'
+# app.baseURL = 'http://localhost:8080/'
+app.baseURL = 'http://36.92.58.82:4000/'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
