--- a/.env
+++ b/.env
@@ -21,13 +21,13 @@ CI_ENVIRONMENT = production
 #--------------------------------------------------------------------
 
 # app.baseURL = 'http://localhost:8080/'
-app.baseURL = 'http://36.92.58.82'
+app.baseURL = 'http://36.92.58.82:4000'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
 # app.CSPEnabled = false
-# API_HOST = 'http://36.92.58.82:1525/api' # testing
-API_HOST = 'http://36.92.58.82:1523/api' # prod
+API_HOST = 'http://36.92.58.82:1525/api' # testing
+# API_HOST = 'http://36.92.58.82:1523/api' # prod
 # API_HOST = 'http://localhost:1523/api' # local
 
 #--------------------------------------------------------------------
